--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="TLA Inventory"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9qHSus9puwSILCxS544JJnYJSK6SEGKlh3MfhfqdBFs=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 MIX_REACT_APP_API_PATH=http://localhost:8000/api
