--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@react-pdf/renderer": "^2.0.15",
         "antd": "^4.21.3",
         "antd-img-crop": "^3.14.1",
+        "apexcharts": "^3.35.5",
         "axios": "^0.27.2",
         "bootstrap": "^4.6.0",
         "cookie": "^0.4.1",
@@ -53,6 +54,7 @@
         "pdfjs-dist": "2.14.305",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-apexcharts": "^1.4.0",
         "react-device-detect": "^1.17.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.4.0",
